Simplify setup and build

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 .idea
 .vscode/
-node_modules/
-dist/
 *.log
 types
+
+.DS_Store
+node_modules/
+dist/
+npm-debug.log
+yarn-error.log
+
+build/.rpt2_cache
+tests/coverage
