--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/node": "^14.0.5",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
-    "alias-hq": "^5.1.3",
+    "alias-hq": "^5.1.6",
     "eslint": "^7.1.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
@@ -65,5 +65,10 @@
   "peerDependencies": {
     "jest-chrome": "^0.7.0",
     "jest": "^24.9.0"
+  },
+  "dependencies": {
+    "clone": "^2.1.2",
+    "deep-is": "^0.1.3",
+    "json-size": "^1.0.0"
   }
 }
