--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jest-chrome-faker",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Working implementations of Chrome Extension API for use with Jest. Builds on extend-chrome/jest-chrome",
   "keywords": [
     "api",
@@ -43,6 +43,7 @@
     "@types/node": "^14.0.5",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
+    "@zerollup/ts-transform-paths": "^1.7.18",
     "alias-hq": "^5.1.6",
     "eslint": "^7.1.0",
     "eslint-config-standard": "^14.1.1",
@@ -60,6 +61,7 @@
     "rollup-plugin-typescript2": "^0.27.2",
     "ts-jest": "^26.0.0",
     "tslib": "^2.0.0",
+    "ttypescript": "^1.5.12",
     "typescript": "^3.9.3"
   },
   "peerDependencies": {
