--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,12 @@
     },
     "typeRoots": [
       "node_modules/@types"
+    ],
+    "plugins": [
+      {
+        "transform": "@zerollup/ts-transform-paths",
+        "exclude": ["*"]
+      }
     ]
   },
   "include": [
