--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "jest": "^24.9.0"
   },
   "dependencies": {
+    "@likelylogic/collection-fns": "^1.0.0",
     "clone": "^2.1.2",
     "deep-is": "^0.1.3",
     "json-size": "^1.0.0"
