--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^12.0.0",
-    "@types/jest": "^25.2.3",
+    "@types/chrome": "^0.0.157",
+    "@types/jest": "^27.5.2",
     "@types/node": "^14.0.5",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
@@ -52,14 +53,14 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^26.4.2",
-    "jest-chrome": "^0.7.0",
+    "jest": "^27.5.1",
+    "jest-chrome": "^0.8.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.11.2",
     "rollup-plugin-license": "^2.2.0",
     "rollup-plugin-typescript2": "^0.27.2",
-    "ts-jest": "^26.0.0",
+    "ts-jest": "^27.1.5",
     "tslib": "^2.0.0",
     "ttypescript": "^1.5.12",
     "typescript": "^3.9.3"
@@ -69,7 +70,7 @@
     "jest": "^24.9.0"
   },
   "dependencies": {
-    "@likelylogic/collection-fns": "^1.0.0",
+    "@davestewart/collection-fns": "^1.0.0",
     "clone": "^2.1.2",
     "deep-is": "^0.1.3",
     "json-size": "^1.0.0"
