--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jest-chrome-faker",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Working implementations of Chrome Extension API for use with Jest. Builds on extend-chrome/jest-chrome",
   "keywords": [
     "api",
@@ -36,10 +36,18 @@
     "test": "jest --watchAll --verbose",
     "test:coverage": "jest --coverage"
   },
+  "dependencies": {
+    "@davestewart/collection-fns": "^1.0.0",
+    "clone": "^2.1.2",
+    "deep-is": "^0.1.3",
+    "json-size": "^1.0.0"
+  },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^12.0.0",
-    "@types/jest": "^25.2.3",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/chrome": "^0.0.157",
+    "@types/jest": "^26.0.0",
     "@types/node": "^14.0.5",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
@@ -52,8 +60,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^26.4.2",
-    "jest-chrome": "^0.7.0",
+    "jest": "^26.0.0",
+    "jest-chrome": "^0.8.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.11.2",
@@ -65,13 +73,7 @@
     "typescript": "^3.9.3"
   },
   "peerDependencies": {
-    "jest-chrome": "^0.7.0",
-    "jest": "^24.9.0"
-  },
-  "dependencies": {
-    "@likelylogic/collection-fns": "^1.0.0",
-    "clone": "^2.1.2",
-    "deep-is": "^0.1.3",
-    "json-size": "^1.0.0"
+    "jest": "^26.0.0",
+    "jest-chrome": "^0.8.0"
   }
 }
